--- a/Kconfig
+++ b/Kconfig
@@ -21,7 +21,11 @@
 # SOFTWARE.
 # 
 
+menu "Bitstring"
+
 config BITSTREAM_ENABLE_BOUND_CHECKS
     bool "Enable checks for out of bound access."
     help
         Enable this setting to let your app crash when a OOB acess occurs.
+
+endmenu
