--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,8 @@ jobs:
       run: pio test -e native
     - name: Run examples
       run: |
-        pio ci --verbose --project-conf platformio.ini --keep-build-dir --build-dir="/tmp/bitstring_ci_build" --lib="." examples/Dynamic\ Sized/dynamic_sized_example.c
-        /tmp/bitstring_ci_build/.pio/build/native/program
-        rm -rf /tmp/bitstring_ci_build/.pio/build/native/program
-        pio ci --verbose --project-conf platformio.ini --keep-build-dir --build-dir="/tmp/bitstring_ci_build" --lib="." examples/Static\ Sized/static_sized_example.c
-        /tmp/bitstring_ci_build/.pio/build/native/program
-        rm -rf /tmp/bitstring_ci_build/.pio/build/native/program
+        pio ci --verbose --project-conf platformio.ini --keep-build-dir --build-dir="/tmp/bitstring_ci_build1" --lib="." examples/Dynamic\ Sized/dynamic_sized_example.c
+        /tmp/bitstring_ci_build1/.pio/build/native/program
+        pio ci --verbose --project-conf platformio.ini --keep-build-dir --build-dir="/tmp/bitstring_ci_build2" --lib="." examples/Static\ Sized/static_sized_example.c
+        /tmp/bitstring_ci_build2/.pio/build/native/program
 
