Next attempt to fix ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,10 @@ jobs:
       run: pio platform install native
     - name: Run PlatformIO
       run: pio test -e native
+    -name: Print version numbers
+      run: |
+        gcc --version
+        pio --version
     - name: Run examples
       run: |
         pio ci --verbose --project-conf platformio.ini --keep-build-dir --build-dir="/tmp/bitstring_ci_build1" --lib="." examples/Dynamic\ Sized/dynamic_sized_example.c
